# contig-connectors

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
benchmarking/: README.md
gold_standard/: filter_blast_6_to_containments.py
gold_standard/mmseqs2_standard/: filter_data_to_marine_contigs.py  filter_data_to_query_and_reference.py  run_mmseqs2.sh  run_mmseqs2_big_db.sh
presentations/: psss_team2_1_Tuesday_presentation.pptx  psss_team2_2_Wednesday_presentation.pptx  psss_team2_3_Thursday_presentation.pptx
rust-cc/: comm.cc  cont.cc
rust-cc/src/: closures.rs  cluster.rs  main.rs  mers.rs
src/: BinMin.cpp  BinMin.h  Query.h  bin.cpp  bin.hpp  closures.rs  cluster.rs  main.cpp  main.rs  mers.rs  query.cpp  query.hpp  sketch.cpp  sketch.hpp
utils/: compare_hits.py  filter_blast.py  filter_contain.py
