cmake_minimum_required(VERSION 3.10)
project(contig-connectors VERSION 1.0)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_RELEASE -lm -lz -O3)
find_package(OpenMP)
find_package(ZLIB)
add_executable(contig-connectors src/main.cpp src/sketch.cpp src/sketch.hpp src/query.cpp src/query.hpp src/bin.cpp src/bin.hpp)
if(OpenMP_CXX_FOUND)
    target_link_libraries(contig-connectors PUBLIC OpenMP::OpenMP_CXX ZLIB::ZLIB)
endif()